0.9.2: (Future)
Other fixes:
 - Qt: Fix infrequent deadlock when using sync to video

0.9.1: (2021-04-18)
Emulation fixes:
 - ARM: Fix LDM^ with empty rlist (fixes mgba.io/i/2127)
 - Core: Fix first event scheduling after loading savestate
 - GB Serialize: Fix switching speed modes when loading a state (fixes mgba.io/i/2097)
 - GB: Fix skipping BIOS
 - GBA Memory: Fix loading Thumb savestates when in ARM mode
 - GBA Video: Fix window start on modes 3-5 with mosaic (fixes mgba.io/i/1690)
 - GBA Video: Fix mode 3-5 overflow with mosaic (fixes mgba.io/i/1691)
Other fixes:
 - GBA: Fix non-USA 1.0 FireRed misdetecting as a ROM hack (fixes mgba.io/i/2100)
 - GBA: Fix crash when ROM loading fails
 - GBA e-Reader: Fix bitmap short strip scanning
 - GBA Video: Fix mode 5 frame 1 caching (fixes mgba.io/i/2075)
 - GBA Video: Don't attempt to copy invalid registers when switching renderer
 - Qt: Fix crash when switching from high-resolution OpenGL renderer to software
 - Qt: Fix OpenGL renderer lagging behind when fast-forwarding (fixes mgba.io/i/2094)
 - Qt: Fix smudged window icon on Windows
 - Qt: Fix saving settings enabling camera when camera name changes (fixes mgba.io/i/2125)
 - Qt: Fix frames getting backlogged (fixes mgba.io/i/2122)
 - Qt: Restore maximized state when starting (fixes mgba.io/i/487)
Misc:
 - Core: Truncate preloading ROMs that slightly exceed max size (fixes mgba.io/i/2093)
 - GBA: Default-enable VBA bug compat for Ruby and Emerald ROM hacks
 - GBA Memory: Log GPIO writes on non-GPIO carts as Pak Hardware instead of Memory
 - Qt: Add ROM filename and size to bug reporter
 - Qt: Improve handling of disabling VBA bug compat mode (fixes mgba.io/i/2129)

0.9.0: (2021-03-28)
Features:
 - e-Reader card scanning
 - New tool for converting between different save game formats
 - WebP and APNG recording
 - Separate overrides for GBC games that can also run on SGB or regular GB
 - Game Boy Player features can be enabled by default for all compatible games