@@ -1,5 +1,6 @@
 0.9.2: (Future)
 Other fixes:
+ - Core: Fix memory leak in opening games from the library
  - Qt: Fix infrequent deadlock when using sync to video
 
 0.9.1: (2021-04-18)
